--- a/docs/ContractDetails.mdx
+++ b/docs/ContractDetails.mdx
@@ -1,19 +1,19 @@
 ---
-name: Contract detail
-route: /contract-detail
+name: Contract details
+route: /contract-details
 menu: 🌐 Organisms
 ---
 
 import { Playground, Props } from 'docz'
 import { ContractDetails, SimpleButton } from '../src'
 
-## Contract items
+## Contract details
 
 - Type: `Organism`
 - Mostly used inside [`<ActionBanner />`](/action-banner)
 - You can no longer add `actions` in `<ContractDetails />`
 
-## output
+## Output
 
 <ContractDetails
   fullWidth={true}
@@ -80,3 +80,7 @@ import { ContractDetails, SimpleButton } from '../src'
     ]}
   />
 </Playground>
+
+## Todo
+
+- Rename for a more generic name
